// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`browser.describe given: [case1] with active browser when: [t0] skill is invoked then: it shows tabs: stderr 1`] = `""`;

exports[`browser.describe given: [case1] with active browser when: [t0] skill is invoked then: it shows tabs: stdout 1`] = `
"
🪨 run solid skill repo=.this/role=any/skill=browser.describe

🐢 gnarly

🐚 browser.describe
   ├─ session: describe-case1
   ├─ tabs: 1
   │
   └─ [0] New Tab
      chrome://new-tab-page/
"
`;

exports[`browser.describe given: [case2] without browser when: [t0] skill is invoked without browser active then: it fails with no browser found error: stderr 1`] = `
"
🪨 run solid skill repo=.this/role=any/skill=browser.describe
   └─ 💥 failed with an error

error: no browser found

start a browser first:
  rhx browser.start --mode HEADFUL
"
`;

exports[`browser.describe given: [case2] without browser when: [t0] skill is invoked without browser active then: it fails with no browser found error: stdout 1`] = `
"
🪨 run solid skill repo=.this/role=any/skill=browser.describe

"
`;

exports[`browser.describe given: [case3] multiple independent sessions when: [t0] each session is described then: shows independent tab state: session1 stderr 1`] = `""`;

exports[`browser.describe given: [case3] multiple independent sessions when: [t0] each session is described then: shows independent tab state: session1 stdout 1`] = `
"
🪨 run solid skill repo=.this/role=any/skill=browser.describe

🐢 gnarly

🐚 browser.describe
   ├─ session: describe-case3a
   ├─ tabs: 1
   │
   └─ [0] New Tab
      chrome://new-tab-page/
"
`;

exports[`browser.describe given: [case3] multiple independent sessions when: [t0] each session is described then: shows independent tab state: session2 stderr 1`] = `""`;

exports[`browser.describe given: [case3] multiple independent sessions when: [t0] each session is described then: shows independent tab state: session2 stdout 1`] = `
"
🪨 run solid skill repo=.this/role=any/skill=browser.describe

🐢 gnarly

🐚 browser.describe
   ├─ session: describe-case3b
   ├─ tabs: 1
   │
   └─ [0] New Tab
      chrome://new-tab-page/
"
`;
